<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <Button
            android:text="@string/Enter"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/btn_sign_in" app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="48dp"
            android:layout_marginStart="48dp"
            android:layout_marginEnd="48dp" android:layout_marginRight="48dp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toTopOf="@+id/regStart_login_text_view"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/email_login_edit_text" android:layout_marginStart="48dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="48dp"
            android:layout_marginTop="210dp" app:layout_constraintTop_toTopOf="parent" android:hint="@string/email"
            android:importantForAutofill="no" tools:targetApi="o" android:layout_marginEnd="48dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="48dp"
            app:layout_constraintHorizontal_bias="0.521"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/password_login_edit_text"
            android:layout_marginStart="48dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="48dp"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/email_login_edit_text"
            android:hint="@string/Passw"
            android:importantForAutofill="no" tools:targetApi="o" android:layout_marginEnd="48dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="48dp"/>
    <ImageView
            android:layout_width="176dp"
            android:layout_height="142dp" app:srcCompat="@mipmap/truelogo"
            android:id="@+id/imageView2"
            android:layout_marginBottom="50dp" app:layout_constraintBottom_toTopOf="@+id/email_login_edit_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent" android:contentDescription="@string/todo"/>
    <TextView
            android:text="@string/regpredlogeniye"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/regStart_login_text_view"
            app:layout_constraintStart_toStartOf="@+id/btn_sign_in"
            app:layout_constraintEnd_toEndOf="@+id/btn_sign_in" android:layout_marginBottom="24dp"
            app:layout_constraintBottom_toBottomOf="parent"/>
</android.support.constraint.ConstraintLayout>