<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LoginActivity"
android:background="@color/colorBackGround">
    <Button
            android:text="@string/Enter"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/sign_in_login_button" app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="48dp"
            android:layout_marginStart="48dp"
            android:textColor="@android:color/white"
            android:background="@drawable/rounded_button"
            android:layout_marginEnd="48dp" android:layout_marginRight="48dp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toTopOf="@+id/regStart_login_text_view"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:layout_marginStart="48dp"
            android:layout_marginLeft="48dp"
            android:id="@+id/email_forg_pass_edit_text"
            app:layout_constraintStart_toStartOf="parent"
            android:background="@drawable/rounded_edit_text"
            android:paddingLeft="16dp"
            android:hint="@string/email"
            android:importantForAutofill="no" tools:targetApi="o" android:layout_marginEnd="48dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="48dp"
            app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="224dp"
            app:layout_constraintTop_toTopOf="parent"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:inputType="textPassword"
            android:ems="10"
            android:background="@drawable/rounded_edit_text"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:id="@+id/password_login_edit_text"
            android:layout_marginStart="48dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="48dp"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/email_forg_pass_edit_text"
            android:hint="@string/Passw"
            android:importantForAutofill="no" tools:targetApi="o" android:layout_marginEnd="48dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="48dp"/>
    <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp" app:srcCompat="@mipmap/logoinreg"
            android:id="@+id/imageView2"
            app:layout_constraintBottom_toTopOf="@+id/email_forg_pass_edit_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:contentDescription="@string/todo"
            android:layout_marginBottom="8dp"/>
    <TextView
            android:text="@string/regpredlogeniye"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/regStart_login_text_view"
            app:layout_constraintStart_toStartOf="@+id/sign_in_login_button"
            app:layout_constraintEnd_toEndOf="@+id/sign_in_login_button" android:layout_marginBottom="24dp"
            app:layout_constraintBottom_toBottomOf="parent"/>
    <TextView
            android:text="@string/forgot_password_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/forgot_password_text_view" android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@+id/password_login_edit_text"
            app:layout_constraintStart_toStartOf="@+id/password_login_edit_text"
            app:layout_constraintEnd_toEndOf="@+id/password_login_edit_text" app:layout_constraintHorizontal_bias="0.5"
            android:textSize="15sp"/>
</androidx.constraintlayout.widget.ConstraintLayout>