<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Reg1Page"
android:background="@color/colorBackGround">
    <Button
            android:text="@string/Goto"
            android:layout_height="50dp"
            android:layout_width="match_parent"
            android:background="@drawable/rounded_button"
            android:textColor="@color/colorWhite"
            android:id="@+id/next_button1" android:layout_marginBottom="24dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginRight="48dp" android:layout_marginEnd="48dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="48dp"
            android:layout_marginStart="48dp"
    />
    <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:background="@drawable/rounded_edit_text"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:id="@+id/email_reg_edit_text" android:layout_marginStart="48dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="48dp"
            android:layout_marginTop="224dp" app:layout_constraintTop_toTopOf="parent" android:hint="@string/email"
            android:importantForAutofill="no" tools:targetApi="o" android:layout_marginEnd="48dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="48dp"/>
    <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:id="@+id/imageView2"
            app:srcCompat="@mipmap/logoinreg"
            app:layout_constraintBottom_toTopOf="@+id/email_reg_edit_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintEnd_toEndOf="parent" android:contentDescription="@string/todo"
            android:layout_marginBottom="8dp"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:inputType="textPassword"
            android:ems="10"
            android:background="@drawable/rounded_edit_text"
            android:paddingLeft="16dp"
            android:id="@+id/password_reg_edit_text"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/email_reg_edit_text"
            android:hint="@string/inppsw" android:layout_marginStart="48dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="48dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="48dp"
            android:layout_marginRight="48dp" android:autofillHints="" tools:targetApi="o"/>
</androidx.constraintlayout.widget.ConstraintLayout>