<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Reg2Page"
android:background="@color/colorBackGround">

    <Button
            android:text="@string/Reg"
            android:layout_height="50dp"
            android:layout_width="match_parent"
            android:background="@drawable/rounded_button"
            android:textColor="@color/colorWhite"
            android:id="@+id/sign_up_reg_button" android:layout_marginBottom="24dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginRight="24dp" android:layout_marginEnd="24dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="24dp"
            android:layout_marginStart="24dp"
    />
    <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp" app:srcCompat="@mipmap/logoinreg"
            android:id="@+id/imageView2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent" android:contentDescription="@string/todo"
            app:layout_constraintBottom_toTopOf="@+id/year_reg_text_view" android:layout_marginBottom="8dp"/>

    <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/year_reg_spinner"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="24dp"
            android:layout_marginStart="24dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            app:layout_constraintHorizontal_bias="0.0" app:layout_constraintTop_toBottomOf="@+id/year_reg_text_view"
            android:layout_marginTop="8dp"/>
    <TextView
            android:text="@string/year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/year_reg_text_view" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="24dp"
            android:layout_marginStart="24dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="224dp"/>
    <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spec_reg_spinner"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="24dp"
            android:layout_marginStart="24dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            app:layout_constraintHorizontal_bias="0.0" app:layout_constraintTop_toBottomOf="@+id/spec_reg_text_view"
            android:layout_marginTop="8dp"/>
    <TextView
            android:text="@string/spec"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/spec_reg_text_view" app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="24dp"
            android:layout_marginStart="24dp" app:layout_constraintTop_toBottomOf="@+id/year_reg_spinner"
            android:layout_marginTop="8dp"/>

    <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/group_reg_spinner"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="24dp"
            android:layout_marginStart="24dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            app:layout_constraintHorizontal_bias="0.0" app:layout_constraintTop_toBottomOf="@+id/group_reg_text_view"
            android:layout_marginTop="8dp"/>
    <TextView
            android:text="@string/gr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/group_reg_text_view" app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="24dp"
            android:layout_marginStart="24dp" app:layout_constraintTop_toBottomOf="@+id/spec_reg_spinner"
            android:layout_marginTop="8dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>