<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".RegPersonPage">
    <Button
            android:text="@string/Goto"
            android:layout_height="50dp"
            android:layout_width="match_parent"
            android:id="@+id/next_button2" android:layout_marginBottom="24dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginRight="48dp" android:layout_marginEnd="48dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="48dp"
            android:layout_marginStart="48dp"
            tools:targetApi="donut"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/name_reg_edit_text"
            android:layout_marginStart="48dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="48dp" android:hint="@string/name"
            android:importantForAutofill="no" tools:targetApi="o" android:layout_marginEnd="48dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="48dp"
            app:layout_constraintHorizontal_bias="1.0"
            android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/upload_new_photo_button"
            android:foregroundGravity="center"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/surname_reg_edit_text" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/name_reg_edit_text" android:layout_marginStart="48dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="48dp" android:hint="@string/sur"
            android:importantForAutofill="no" tools:targetApi="o" android:layout_marginEnd="48dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="48dp"/>
    <EditText
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:ems="10"
            android:id="@+id/phone_reg_edit_text" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/surname_reg_edit_text"
            app:layout_constraintStart_toStartOf="@+id/surname_reg_edit_text" app:layout_constraintEnd_toEndOf="@+id/surname_reg_edit_text"
            android:hint="@string/telnum_reg" android:importantForAutofill="no" tools:targetApi="o"
            android:layout_width="match_parent" android:layout_marginLeft="48dp" android:layout_marginStart="48dp"
            android:layout_marginRight="48dp" android:layout_marginEnd="48dp"/>
    <Button
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:id="@+id/upload_new_photo_button"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            android:visibility="visible" app:layout_constraintHorizontal_bias="0.512"
            android:layout_marginTop="80dp" android:foregroundGravity="fill"/>
</androidx.constraintlayout.widget.ConstraintLayout>