<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackGround"
        tools:context=".ResetPasswordActivity">

    <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp" app:srcCompat="@mipmap/logoinreg"
            android:id="@+id/imageView2"
            android:contentDescription="@string/todo"
            app:layout_constraintBottom_toTopOf="@+id/email_forg_pass_edit_text"
            app:layout_constraintStart_toStartOf="@+id/email_forg_pass_edit_text"
            app:layout_constraintEnd_toEndOf="@+id/email_forg_pass_edit_text" android:layout_marginBottom="8dp"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:paddingLeft="16dp"
            android:background="@drawable/rounded_edit_text"
            android:id="@+id/email_forg_pass_edit_text" android:layout_marginStart="48dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="48dp"
            android:hint="@string/email"
            android:importantForAutofill="no" tools:targetApi="o" android:layout_marginEnd="48dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="48dp"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginTop="224dp" app:layout_constraintTop_toTopOf="parent"/>
    <Button
            android:text="@string/reset_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_button"
            android:id="@+id/reset_password_forg_pass_button"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:textColor="@color/colorWhite"
            app:layout_constraintStart_toStartOf="@+id/email_forg_pass_edit_text"
            app:layout_constraintEnd_toEndOf="@+id/email_forg_pass_edit_text"
            app:layout_constraintTop_toBottomOf="@+id/email_forg_pass_edit_text" android:layout_marginTop="48dp"
            app:layout_constraintHorizontal_bias="0.496"/>
</androidx.constraintlayout.widget.ConstraintLayout>